--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,7 +49,7 @@
   }
   
   .navbar__links {
-    color: rgb(14, 10, 10);
+    color: #062905;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,14 +78,14 @@
     border: none;
     outline: none;
     border-radius: 4px;
-    background: #833ab4;
+    background: #fff;
     background: linear-gradient(to right, #a79e93, #17881d, #074712);
     color: #fff;
     transition: all 0.3s ease;
   }
   
   .navbar__links:hover {
-    color: #9518fc;
+    color: #062905;
     transition: all 0.3s ease;
   }
   
@@ -113,7 +113,7 @@
     }
   
     .navbar__menu.active {
-      background: #131313;
+      background: #fff;
       top: 100%;
       opacity: 1;
       transition: all 0.5s ease;
@@ -182,4 +182,280 @@
       transform: translateY(-8px) rotate(-45deg);
     }
   }
+
+
+
+
+
+
+
+
+
+
+
+  .footer__container {
+    background-color: #fff;
+    padding: 5rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
   
+  #footer__logo {
+    color:#131313;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
+  }
+  
+  .footer__links {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .footer__link--wrapper {
+    display: flex;
+  }
+  
+  .footer__link--items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: left;
+    width: 160px;
+    box-sizing: border-box;
+  }
+  
+  .footer__link--items h2 {
+    margin-bottom: 16px;
+    color: #131313;;
+  }
+  
+  .footer__link--items a {
+    color: #131313;
+    text-decoration: none;
+    margin-bottom: 0.5rem;
+    transition: 0.3 ease-out;
+  }
+  
+  .footer__link--items a:hover {
+    color: #e9e9e9;
+    transition: 0.3 ease-out;
+  }
+  
+  .social__icon--link {
+    color: #131313;
+    font-size: 24px;
+  }
+  
+  .social__media {
+    max-width: 1000px;
+    width: 100%;
+  }
+  
+  .social__media--wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    max-width: 1000px;
+    margin: 40px auto 0 auto;
+  }
+  
+  .social__icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 240px;
+  }
+  
+  .website__rights {
+    color: #131313;;
+  }
+  
+  @media screen and (max-width: 820px) {
+    .footer__links {
+      padding-top: 2rem;
+    }
+  }
+
+
+
+  .hero {
+    background:#fff;
+    padding: 200px 0;
+  }
+  
+  .hero__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 40%;
+    text-align: center;
+    padding: 30px;
+  }
+  
+  .hero__heading {
+    font-size: 80px;
+    margin-bottom: 24px;
+    color:#131313
+  }
+  
+
+  
+  .hero__description {
+    font-size: 60px;
+  }
+  
+  .highlight {
+    border-bottom: 4px solid rgb(132, 0, 255);
+  }
+  
+  @media screen and (max-width: 768px) {
+    .hero__heading {
+      font-size: 60px;
+    }
+  
+    .hero__description {
+      font-size: 40px;
+    }
+  }
+
+.services {
+  color: #161616;
+  text-align: center;
+}
+
+.services1 {
+  color: #161616;
+  text-align: center;
+}
+.services2 {
+  color: #161616;
+  text-align: center;
+}
+.services3 {
+  color: #161616;
+  text-align: center;
+}
+.services4 {
+  color: #161616;
+  text-align: center;
+}
+
+.owl-carousel owl-theme {
+height: 300px;
+}
+
+.services {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 10rem 0;
+}
+
+.services h1 {
+  background-color: #fff;
+  background-size: 100%;
+  margin-bottom: 5rem;
+  font-size: 2.5rem;
+}
+
+.services__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.services__card {
+  margin: 10px;
+  height: 425px;
+  width: 300px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  background-image: linear-gradient(to right, #1ca318 0%, #82a588 100%);
+  transition: 0.3s ease-in;
+}
+
+.services__card:nth-child(2) {
+  background: #9cdf8f;
+  background: linear-gradient(
+    to right,
+    #4fb97b,
+    #0f753d,
+    #11941c
+  );
+}
+
+.services__card:nth-child(3) {
+  background-image: linear-gradient(
+    -225deg,
+    #032706 0%,
+    #066626 29%,
+    #083520 67%,
+    #083306 100%
+  );
+}
+
+.services__card h2 {
+  text-align: center;
+}
+
+.services__card p {
+  text-align: center;
+  margin-top: 24px;
+  font-size: 20px;
+}
+
+.services__btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.services__card button {
+  color: #fff;
+  padding: 14px 24px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background: #033f15;
+  font-size: 1rem;
+}
+
+.services__card button:hover {
+  cursor: pointer;
+}
+
+.services__card:hover {
+  transform: scale(1.075);
+  transition: 0.3s ease-in;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1300px) {
+  .services__wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .services__wrapper {
+    grid-template-columns: 1fr;
+  }
+}
